# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
include/: CheckOut.h  ConverterJSON.h  CustomExceptions.h  InvertedIndex.h  SearchServer.h  WordHandler.h
src/: CheckOut.cpp  ConverterJSON.cpp  CustomExceptions.cpp  InvertedIndex.cpp  SearchServer.cpp  WordHandler.cpp  main.cpp
unit_tests/: CMakeLists.txt
unit_tests/InvertedIndex_test/: InvertedIndexBasicTest.cpp
unit_tests/SearchServer_test/: SearchServerBasicTest.cpp
unit_tests/WordHandler_test/: WordHandlerBasicTest.cpp
